2011-06-27  Tristan Gingold  <gingold@adacore.com>

	* config/obj-evax.c (evax_frob_file_before_adjust): Add comments.
	Fix style.
	* config/obj-evax.h (struct alpha_linkage_fixups): Remove seg
	field.  Add comments.
	(obj_symbol_type, object_headers, OBJ_SYMFIELD_TYPE): Remove

2011-06-26  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (fix_24k_record_store_info): If the previous
	instruction was a store, and the next instructions are unknown,
	assume the worst.

2011-06-25  Richard Sandiford  <rdsandiford@googlemail.com>

	PR gas/12915
	* config/tc-mips.c (nops_for_vr4130, nops_for_24k, nops_for_insn)
	(nops_for_sequence, nops_for_insn_or_target): Add ignore parameters.
	(mips_emit_delays, start_noreorder): Update accordingly.
	(append_insn): Likewise.  Revert original fix for this PR
	and use the ignore parameter instead.

2011-06-24  Tristan Gingold  <gingold@adacore.com>

	PR gas/11625
	* config/obj-evax.c (evax_frob_symbol): Use as_bad instead of abort.

2011-06-24  Tristan Gingold  <gingold@adacore.com>

	* config/tc-alpha.c (add_to_link_pool): Remove useless offset
	variable.  Fix style.

2011-06-23  Richard Sandiford  <rdsandiford@googlemail.com>

	PR gas/12915
	* config/tc-mips.c (append_insn): Only consider hazards between the
	pre-noreorder block and ip.

2011-06-21  Sameera Deshpande  <sameera.deshpande@arm.com>

	* config/tc-arm.c (vfp_conv): Add check on range of immediate operand
	in vcvt instruction between floating-point and fixed-point.
	(operand_parse_code): Add "OP_oI32z".
	(parse_operands): OP_oI32z case added.

2011-06-20  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.tgt: Revert x32 change.

2011-06-20  Nick Clifton  <nickc@redhat.com>

	* doc/Makefile.am: (CPU_DOCS): Add c-xstormy16.texi.
	* doc/Makefile.in: Regenerate.
	* doc/all.texi: Set XSTORMY16.
	* doc/c-xstormy16.texi: New file.

2011-06-19  H.J. Lu  <hongjiu.lu@intel.com>

	* configure.tgt: Support x32.

2011-06-15  Nick Clifton  <nickc@redhat.com>
